kubernetes/infrastructure/external/homeassistant.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
    - protocol: TCP
      port: 8123
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
subsets:
  - 
    addresses:
      - ip: 192.168.201.51 # External IP
    ports:
      - port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: homeassistant.truxonline.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
  tls:
    - secretName: homeassistant-tls
      hosts:
        - homeassistant.truxonline.com
